updated webpack plugins and build

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,412 +1,1 @@
-.I1H-plcspvjeRmyFzoCjN {
-  font-family: inherit;
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-content: stretch;
-  width: 100%;
-  padding: 0 15px; }
-  .I1H-plcspvjeRmyFzoCjN._2jkY3Zm5NrXEs7rFQSLu7G {
-    position: relative;
-    padding: 0; }
-  .I1H-plcspvjeRmyFzoCjN ._1TuTmJlqFQyqgvppn3uxM- {
-    cursor: pointer;
-    text-decoration: none;
-    font-weight: 700;
-    font-family: inherit;
-    color: inherit; }
-    .I1H-plcspvjeRmyFzoCjN ._1TuTmJlqFQyqgvppn3uxM-:visited {
-      color: #2E0EBF; }
-  .I1H-plcspvjeRmyFzoCjN ._2XLbP5xr5NIxkdNbk_a0Fi {
-    position: relative;
-    flex-grow: 0.95;
-    padding: 0 1px 0;
-    font-family: 'Lekton', sans-serif;
-    font-size: 0.95rem;
-    line-height: 1.25rem;
-    color: #444; }
-
-.q9pSLad9WoPzERA25fmn3 {
-  font-family: 'Lekton', sans-serif;
-  box-sizing: border-box;
-  padding-bottom: 15px;
-  color: #444;
-  margin: 0; }
-  .q9pSLad9WoPzERA25fmn3._2jkY3Zm5NrXEs7rFQSLu7G {
-    margin-left: auto;
-    padding-bottom: 0; }
-  .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA {
-    display: inline-block;
-    cursor: pointer;
-    font-family: inherit;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 700;
-    letter-spacing: 1px;
-    margin: 0 8px;
-    padding: 3px 1px;
-    line-height: 1rem;
-    color: #6E4EFF;
-    background: linear-gradient(to bottom, transparent 94%, #6E4EFF 94%) no-repeat;
-    background-size: 0% 100%;
-    transition: background-size 0.2s ease, font-weight .218s ease-in-out, letter-spacing .218s ease-in-out; }
-    .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA:first-child {
-      padding-left: 0;
-      margin: 0 8px 0 0; }
-    .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA:last-child {
-      padding-right: 0;
-      margin: 0 0 0 8px; }
-    .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA:hover {
-      font-weight: 400;
-      letter-spacing: 1.1px;
-      color: #444;
-      background-size: 100% 100%; }
-    .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA._2jkY3Zm5NrXEs7rFQSLu7G {
-      padding: 7px 1px;
-      font-size: 1rem;
-      text-align: left; }
-      .q9pSLad9WoPzERA25fmn3 ._12TZtrrd4kXZuZDJ4wX5HA._2jkY3Zm5NrXEs7rFQSLu7G:hover {
-        font-weight: 400;
-        letter-spacing: 1.1px;
-        color: #444;
-        background-size: 100% 100%; }
-._2lhzz4itEOgnwqqlRuy_L {
-  font-family: inherit;
-  height: 0px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity .0s ease; }
-  ._2lhzz4itEOgnwqqlRuy_L._14Rnd0ch5aJ6OCyEX-lOG {
-    pointer-events: all;
-    height: initial;
-    padding: 15px 0 38px;
-    transition: opacity .618s ease-out;
-    opacity: 1; }
-    ._2lhzz4itEOgnwqqlRuy_L._14Rnd0ch5aJ6OCyEX-lOG ._3whsuPpKAwnVzoiwpy6T6G {
-      font-family: inherit;
-      font-size: 17px;
-      font-weight: bold;
-      line-height: 23px;
-      min-height: 38px;
-      padding: 12px 15px 0 0; }
-  ._2lhzz4itEOgnwqqlRuy_L .okRcxxI22X90QRHoCEkMu {
-    font-family: 'Lekton', sans-serif;
-    font-size: 0.95rem;
-    line-height: 1.25rem;
-    color: #444;
-    padding: 0 1px;
-    width: 100%;
-    min-height: 38px; }
-    ._2lhzz4itEOgnwqqlRuy_L .okRcxxI22X90QRHoCEkMu span {
-      font-family: inherit; }
-    ._2lhzz4itEOgnwqqlRuy_L .okRcxxI22X90QRHoCEkMu :first-child:before {
-      content: ""; }
-    ._2lhzz4itEOgnwqqlRuy_L .okRcxxI22X90QRHoCEkMu :before {
-      content: ", "; }
-.mMD8CmPAq_N-zJzfNgVm2 {
-  cursor: pointer;
-  font-family: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 0.9rem;
-  font-weight: 400;
-  letter-spacing: 1px;
-  padding: 0 1px 3px;
-  line-height: 1rem;
-  color: #333;
-  background: linear-gradient(to bottom, transparent 94%, #6E4EFF 94%) no-repeat;
-  background-size: 100% 100%;
-  transition: background-size 0.2s ease, color .218s ease-in-out, font-weight .218s ease-in-out, letter-spacing .218s ease-in-out; }
-  .mMD8CmPAq_N-zJzfNgVm2:hover {
-    font-weight: 700;
-    color: #6E4EFF;
-    background-size: 0% 100%; }
-.XjR_WXXSTWXNp8Jg6lcAc {
-  font-family: inherit;
-  width: 98%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
-  .XjR_WXXSTWXNp8Jg6lcAc ._3B3vUda4OubyB4DBiMEhYf {
-    display: inline;
-    font-family: inherit;
-    padding: 0 1px 5px; }
-
-.nm6ICXDl51rsSvcCWJSgc {
-  font-family: inherit;
-  padding: 15px 0 0; }
-  .nm6ICXDl51rsSvcCWJSgc ._3n4T1ruq4LHosGeieeZwU8 {
-    width: 100%;
-    color: #444;
-    font-family: inherit;
-    font-weight: 400;
-    font-size: 0.9rem;
-    line-height: 1.25rem;
-    text-align: right;
-    opacity: 0;
-    transition: opacity .218s ease-in; }
-    .nm6ICXDl51rsSvcCWJSgc ._3n4T1ruq4LHosGeieeZwU8._1VeNt3Z_A5LD-c4mf6pQ_V {
-      opacity: 1; }
-._3hpGsijg0fqh8qjnJLyoMh {
-  font-family: 'Poppins', sans-serif; }
-
-._2f7Mpi0mKlPvfn-gQdLaw7 {
-  font-family: 'Lekton', sans-serif;
-  font-weight: 400;
-  font-size: 1.1rem;
-  line-height: 1.6rem;
-  color: #444;
-  margin: 0;
-  padding: 0 16px 0; }
-
-._3VKzR44V2onkaFOhaueEq9 {
-  cursor: pointer;
-  text-decoration: none;
-  font-weight: 700;
-  font-family: inherit;
-  color: inherit; }
-  ._3VKzR44V2onkaFOhaueEq9:visited {
-    color: #7063b9; }
-._1_RrWEZFoFg_IMP2GTWchJ {
-  box-sizing: border-box;
-  position: relative;
-  z-index: 1;
-  float: right;
-  color: #6E4EFF;
-  margin: 15px;
-  padding: 3px 16px 0;
-  outline: none;
-  opacity: 0.7;
-  font-weight: 400;
-  font-size: 0.9rem;
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  line-height: 28px;
-  letter-spacing: 0.6px;
-  text-align: center;
-  border-radius: 2px;
-  border-style: solid;
-  border-color: transparent;
-  border-image: initial;
-  min-height: 32px;
-  background: transparent;
-  cursor: pointer;
-  transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1), opacity 400ms ease-out, background 200ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 200ms cubic-bezier(0.4, 0, 0.2, 1); }
-  ._1_RrWEZFoFg_IMP2GTWchJ:active {
-    box-shadow: rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px, rgba(0, 0, 0, 0.2) 0px 2px 4px -1px; }
-  ._1_RrWEZFoFg_IMP2GTWchJ:hover {
-    opacity: 1;
-    color: #6E4EFF;
-    box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px, rgba(0, 0, 0, 0.2) 0px 1px 5px 0px; }
-  ._1_RrWEZFoFg_IMP2GTWchJ.vqi5DlyrbcjrDomyMkVnR {
-    color: #D5CCFD; }
-    ._1_RrWEZFoFg_IMP2GTWchJ.vqi5DlyrbcjrDomyMkVnR:active {
-      box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 10px 0px, rgba(0, 0, 0, 0.13) 0px 2px 4px -1px; }
-    ._1_RrWEZFoFg_IMP2GTWchJ.vqi5DlyrbcjrDomyMkVnR:hover {
-      box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 2px 0px, rgba(0, 0, 0, 0.05) 0px 3px 1px -2px, rgba(0, 0, 0, 0.13) 0px 1px 5px 0px; }
-
-._2Sg5364DiO115Psxso6oin {
-  box-sizing: border-box;
-  width: 100%;
-  overflow: hidden; }
-
-._3zqfDFIsoL4tD3OBaIIy7D {
-  height: 45%;
-  margin: 0 16px;
-  background-color: #F4F4F4;
-  box-shadow: #000 0px 1px 7px -3px inset; }
-
-._3RLDGXyyPW7wxcvJ4deXFL {
-  height: 55%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch; }
-
-._1PV1obrXu10RF1eDqXZ8hT {
-  width: 100%;
-  height: 100%; }
-
-._2nXX6e7gkT0u7qPL8Qbtf6 {
-  box-sizing: border-box;
-  padding: 15px 0 0;
-  width: 100%; }
-
-._13e3P900VEUIoUT8-ktmK3 {
-  font-family: 'Poppins', sans-serif;
-  box-sizing: border-box;
-  position: relative;
-  bottom: 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
-  width: 100%;
-  min-height: 55%; }
-._206JjsSKBhUyYxgzsYTvNc {
-  display: block;
-  text-align: center;
-  font-weight: 300;
-  letter-spacing: 1px;
-  font-family: 'Poppins', sans-serif; }
-@keyframes lv6PocElU9I4hYC535dpF {
-  0% {
-    filter: hue-rotate(0deg); }
-  50% {
-    filter: hue-rotate(-45deg); }
-  100% {
-    filter: hue-rotate(0deg); } }
-
-._2d0v2WZ_kZonRpWk9hvrNl {
-  position: fixed;
-  left: 50%;
-  will-change: transform, top, filter;
-  transform: translate(-50%, -50%);
-  cursor: default; }
-
-.lv6PocElU9I4hYC535dpF {
-  animation: lv6PocElU9I4hYC535dpF 13s infinite linear; }
-
-._1pKBymlgIxSIQfZ_08k6tg {
-  color: #6E4EFF;
-  overflow: visible;
-  will-change: letter-spacing;
-  -webkit-font-smoothing: antialiased; }
-
-._3F8I_brrELuX-uxFrUXbET {
-  font-weight: 100;
-  font-size: 8rem;
-  line-height: 6rem;
-  padding-left: 0.33rem; }
-
-._2SRH36X8Ou7gptkRpVahNo {
-  font-weight: 400;
-  font-size: 3rem;
-  line-height: 4rem;
-  padding-left: 0.7rem; }
-
-._1PiJ9hcNRs8Mf28pjezvdN {
-  font-weight: 100;
-  font-size: 13rem;
-  line-height: 10rem;
-  padding-left: 1.4rem; }
-
-._30321NsncB9wfiaIy0nanD {
-  font-weight: 100;
-  font-size: 8rem;
-  font-style: italic;
-  line-height: 7rem;
-  padding-right: 1rem; }
-
-._1TVPP1SJgRausIDelzXI11 {
-  font-weight: 900;
-  font-size: 2rem;
-  line-height: 2rem;
-  padding-right: 0.05rem; }
-
-._3KvlQbq0Ai8JwlVQ1M-nGx {
-  font-weight: 100;
-  font-size: 5rem;
-  line-height: 4rem;
-  padding-right: 0.15rem; }
-
-.VEivHSLwGG_QwotWRwdca {
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 2rem; }
-
-.LvMAUgeaqS4v49zqZw2Ku {
-  font-weight: 100;
-  font-size: 3rem;
-  line-height: 3rem;
-  padding-left: 0.3rem; }
-
-._2Y4V7JTCCYodYRFg08sAAT {
-  box-sizing: border-box;
-  margin: auto auto -90px;
-  background: transparent;
-  will-change: filter; }
-  ._2Y4V7JTCCYodYRFg08sAAT :first-child {
-    margin-bottom: 50px; }
-
-._2k75mYRKpDZKCkYo-P3j0t {
-  position: absolute;
-  z-index: 99999999;
-  top: 0;
-  left: calc(50% - 225px);
-  height: 100%;
-  width: 1px;
-  background: #FC8; }
-
-._3mezxV1k4RExNZgWJh9fGJ {
-  position: absolute;
-  z-index: 99999999;
-  top: 0;
-  right: calc(50% - 225px);
-  height: 100%;
-  width: 1px;
-  background: #FC8; }
-._8BA1kY1QD3q2rxKtbbXae {
-  opacity: 0.618;
-  text-align: center;
-  transition: opacity .618s ease-in-out; }
-  ._8BA1kY1QD3q2rxKtbbXae._1g0na4VNlnOljjaIC1By5W {
-    opacity: 0.01; }
-  ._8BA1kY1QD3q2rxKtbbXae ._2nQeCS-HwFMOH-MqnUVqWW {
-    margin: auto;
-    width: 89px;
-    height: 89px; }
-    ._8BA1kY1QD3q2rxKtbbXae ._2nQeCS-HwFMOH-MqnUVqWW {
-      transform: rotate(45deg); }
-
-._3t4gKACRMn-F6zjmPjh2-j {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  border-right: #6E4EFF solid 3px;
-  border-bottom: #6E4EFF solid 3px;
-  padding: 10px; }
-  ._3t4gKACRMn-F6zjmPjh2-j * {
-    margin: 3px 0 0 3px; }
-@media screen and (max-width: 499px) {
-  html {
-    font-size: 10px; } }
-
-@media screen and (max-width: 499px) and (max-height: 300px) {
-  html {
-    font-size: 8px; } }
-
-@media screen and (max-width: 899px) and (min-width: 500px) {
-  html {
-    font-size: 12px; } }
-
-@media screen and (max-width: 899px) and (min-width: 500px) and (max-height: 450px) {
-  html {
-    font-size: 8px; } }
-
-@media screen and (max-width: 1299px) and (min-width: 900px) {
-  html {
-    font-size: 14px; } }
-
-@media screen and (max-width: 1299px) and (min-width: 900px) and (max-height: 650px) {
-  html {
-    font-size: 12px; } }
-
-@media screen and (min-width: 1300px) {
-  html {
-    font-size: 16px; } }
-
-@media screen and (min-width: 1300px) and (max-height: 799px) {
-  html {
-    font-size: 14px; } }
-
-@media only screen and (min-device-width: 299px) and (max-device-width: 749px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  html {
-    font-size: 26px; } }
-
-@media only screen and (min-device-width: 299px) and (max-device-width: 749px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-  html {
-    font-size: 10px; } }
+.cContent{font-family:inherit;box-sizing:border-box;position:absolute;top:0;right:0;bottom:0;display:flex;flex-direction:column;align-content:stretch;width:100%;padding:0 15px}.cContent.clicked{position:relative;padding:0}.cContent .inlineLink{cursor:pointer;text-decoration:none;font-weight:700;font-family:inherit;color:inherit}.cContent .inlineLink:visited{color:#2e0ebf}.cContent .contentBlock{position:relative;flex-grow:0.95;padding:0 1px;font-size:.95rem;line-height:1.25rem}.cContent .contentBlock,.linksWrap{font-family:Lekton,sans-serif;color:#444}.linksWrap{box-sizing:border-box;padding-bottom:15px;margin:0}.linksWrap.clicked{margin-left:auto;padding-bottom:0}.linksWrap .link{display:inline-block;cursor:pointer;font-family:inherit;text-decoration:none;text-transform:uppercase;font-size:.9rem;font-weight:700;letter-spacing:1px;margin:0 8px;padding:3px 1px;line-height:1rem;color:#6e4eff;background:linear-gradient(180deg,transparent 94%,#6e4eff 0) no-repeat;background-size:0 100%;transition:background-size .2s ease,font-weight .218s ease-in-out,letter-spacing .218s ease-in-out}.linksWrap .link:first-child{padding-left:0;margin:0 8px 0 0}.linksWrap .link:last-child{padding-right:0;margin:0 0 0 8px}.linksWrap .link:hover{font-weight:400;letter-spacing:1.1px;color:#444;background-size:100% 100%}.linksWrap .link.clicked{padding:7px 1px;font-size:1rem;text-align:left}.linksWrap .link.clicked:hover{font-weight:400;letter-spacing:1.1px;color:#444;background-size:100% 100%}.skillsContent{font-family:inherit;height:0;pointer-events:none;opacity:0;transition:opacity 0s ease}.skillsContent.show{pointer-events:all;height:auto;padding:15px 0 38px;transition:opacity .618s ease-out;opacity:1}.skillsContent.show .subTitle{font-family:inherit;font-size:17px;font-weight:700;line-height:23px;min-height:38px;padding:12px 15px 0 0}.skillsContent .skillWrap{font-family:Lekton,sans-serif;font-size:.95rem;line-height:1.25rem;color:#444;padding:0 1px;width:100%;min-height:38px}.skillsContent .skillWrap span{font-family:inherit}.skillsContent .skillWrap :first-child:before{content:""}.skillsContent .skillWrap :before{content:", "}.pLink{cursor:pointer;font-family:inherit;text-decoration:none;text-transform:uppercase;font-size:.9rem;font-weight:400;letter-spacing:1px;padding:0 1px 3px;line-height:1rem;color:#333;background:linear-gradient(180deg,transparent 94%,#6e4eff 0) no-repeat;background-size:100% 100%;transition:background-size .2s ease,color .218s ease-in-out,font-weight .218s ease-in-out,letter-spacing .218s ease-in-out}.pLink:hover{font-weight:700;color:#6e4eff;background-size:0 100%}.pTitleWrap{font-family:inherit;width:98%;display:flex;flex-wrap:wrap;justify-content:space-between}.pTitleWrap .pWrap{display:inline;font-family:inherit;padding:0 1px 5px}.pDetailWrap{font-family:inherit;padding:15px 0 0}.pDetailWrap .pDetail{width:100%;color:#444;font-family:inherit;font-weight:400;font-size:.9rem;line-height:1.25rem;text-align:right;opacity:0;transition:opacity .218s ease-in}.pDetailWrap .pDetail.view{opacity:1}.customTitle{font-family:Poppins,sans-serif}.content{font-family:Lekton,sans-serif;font-weight:400;font-size:1.1rem;line-height:1.6rem;color:#444;margin:0;padding:0 16px}.inlineLink{cursor:pointer;text-decoration:none;font-weight:700;font-family:inherit;color:inherit}.inlineLink:visited{color:#7063b9}.droneBtn{box-sizing:border-box;position:relative;z-index:1;float:right;color:#6e4eff;margin:15px;padding:3px 16px 0;outline:none;opacity:.7;font-weight:400;font-size:.9rem;font-family:Poppins,sans-serif;text-transform:uppercase;line-height:28px;letter-spacing:.6px;text-align:center;border-radius:2px;border-style:solid;border-color:transparent;border-image:initial;min-height:32px;background:transparent;cursor:pointer;transition:color .2s cubic-bezier(.4,0,.2,1),opacity .4s ease-out,background .2s cubic-bezier(.4,0,.2,1),box-shadow .2s cubic-bezier(.4,0,.2,1)}.droneBtn:active{box-shadow:0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2)}.droneBtn:hover{opacity:1;color:#6e4eff;box-shadow:0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.12),0 1px 5px 0 rgba(0,0,0,.2)}.droneBtn.clicked{color:#d5ccfd}.droneBtn.clicked:active{box-shadow:0 4px 5px 0 rgba(0,0,0,.07),0 1px 10px 0 rgba(0,0,0,.05),0 2px 4px -1px rgba(0,0,0,.13)}.droneBtn.clicked:hover{box-shadow:0 2px 2px 0 rgba(0,0,0,.07),0 3px 1px -2px rgba(0,0,0,.05),0 1px 5px 0 rgba(0,0,0,.13)}.horiHalf{box-sizing:border-box;width:100%;overflow:hidden}.parallaxWrap{height:45%;margin:0 16px;background-color:#f4f4f4;box-shadow:inset 0 1px 7px -3px #000}.bottom{height:55%;display:flex;flex-wrap:wrap;align-items:stretch}.bgLayer{width:100%;height:100%}.contentWrap{padding:15px 0 0}.cardWrap,.contentWrap{box-sizing:border-box;width:100%}.cardWrap{position:relative;bottom:0;display:flex;flex-wrap:wrap;align-items:stretch;min-height:55%}.cardWrap,.footerText{font-family:Poppins,sans-serif}.footerText{display:block;text-align:center;font-weight:300;letter-spacing:1px}@keyframes hueShift{0%{filter:hue-rotate(0deg)}50%{filter:hue-rotate(-45deg)}to{filter:hue-rotate(0deg)}}.greetingTextWrap{position:fixed;left:50%;will-change:transform,top,filter;transform:translate(-50%,-50%);cursor:default}.hueShift{animation:hueShift 13s linear infinite}.title{color:#6e4eff;overflow:visible;will-change:letter-spacing;-webkit-font-smoothing:antialiased}.title0{font-weight:100;font-size:8rem;line-height:6rem;padding-left:.33rem}.title1{font-weight:400;font-size:3rem;line-height:4rem;padding-left:.7rem}.title2{font-weight:100;font-size:13rem;line-height:10rem;padding-left:1.4rem}.title3{font-weight:100;font-size:8rem;font-style:italic;line-height:7rem;padding-right:1rem}.title4{font-weight:900;font-size:2rem;line-height:2rem;padding-right:.05rem}.title5{font-weight:100;font-size:5rem;line-height:4rem;padding-right:.15rem}.title6{font-weight:600;font-size:2rem;line-height:2rem}.title7{font-weight:100;font-size:3rem;line-height:3rem;padding-left:.3rem}.footWrap{box-sizing:border-box;margin:auto auto -90px;background:transparent;will-change:filter}.footWrap :first-child{margin-bottom:50px}.guideOne{left:calc(50% - 225px)}.guideOne,.guideTwo{position:absolute;z-index:99999999;top:0;height:100%;width:1px;background:#fc8}.guideTwo{right:calc(50% - 225px)}.greetingFooter{opacity:.618;text-align:center;transition:opacity .618s ease-in-out}.greetingFooter.hide{opacity:.01}.greetingFooter .contentWrap{margin:auto;width:89px;height:89px;transform:rotate(45deg)}.pointDown{box-sizing:border-box;width:100%;height:100%;border-right:3px solid #6e4eff;border-bottom:3px solid #6e4eff;padding:10px}.pointDown *{margin:3px 0 0 3px}@media screen and (max-width:499px){html{font-size:10px}}@media screen and (max-width:499px) and (max-height:300px){html{font-size:8px}}@media screen and (max-width:899px) and (min-width:500px){html{font-size:12px}}@media screen and (max-width:899px) and (min-width:500px) and (max-height:450px){html{font-size:8px}}@media screen and (max-width:1299px) and (min-width:900px){html{font-size:14px}}@media screen and (max-width:1299px) and (min-width:900px) and (max-height:650px){html{font-size:12px}}@media screen and (min-width:1300px){html{font-size:16px}}@media screen and (min-width:1300px) and (max-height:799px){html{font-size:14px}}@media only screen and (min-device-width:299px) and (max-device-width:749px) and (-webkit-min-device-pixel-ratio:2) and (orientation:portrait){html{font-size:26px}}@media only screen and (min-device-width:299px) and (max-device-width:749px) and (-webkit-min-device-pixel-ratio:2) and (orientation:landscape){html{font-size:10px}}
