--- a/app/components/greeting-footer.scss
+++ b/app/components/greeting-footer.scss
@@ -2,6 +2,7 @@
     opacity: 0.618;
     text-align: center;
     transition: opacity .618s ease-in-out;
+    transform-origin: 50% 75%;
     &.hide {
         opacity: 0.01;
     }
