--- a/app/components/greeting.scss
+++ b/app/components/greeting.scss
@@ -89,21 +89,21 @@
     }
 }
 
-.guideOne {
-    position: absolute;
-    z-index: 99999999;
-    top: 0;
-    left: calc(50% - 225px);
-    height: 100%;
-    width: 1px;
-    background: #FC8; // #FFF;
-}
-.guideTwo {
-    position: absolute;
-    z-index: 99999999;
-    top: 0;
-    right: calc(50% - 225px);
-    height: 100%;
-    width: 1px;
-    background: #FC8; // #FFF;
-}
+// .guideOne {
+//     position: absolute;
+//     z-index: 99999999;
+//     top: 0;
+//     left: calc(50% - 205px);
+//     height: 100%;
+//     width: 1px;
+//     background: #FC8; // #FFF;
+// }
+// .guideTwo {
+//     position: absolute;
+//     z-index: 99999999;
+//     top: 0;
+//     right: calc(50% - 205px);
+//     height: 100%;
+//     width: 1px;
+//     background: #FC8; // #FFF;
+// }
